--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         <!-- Begin footer -->
         <footer class="text-off-white">
 
-            <div class="footer-top">
+            <!-- <div class="footer-top">
                 <div class="container">
                     <div class="row wow bounceInLeft" data-wow-delay="0.4s">
 
@@ -540,9 +540,9 @@
                             </div>
                         </div>
 
-                    </div> <!-- /.row -->
-                </div> <!-- /.container -->
-            </div>
+                    </div>
+                </div>
+            </div> -->
 
             <div class="footer">
                 <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
