--- a/products.html
+++ b/products.html
@@ -26,10 +26,11 @@
     <link rel="stylesheet" href="inc/owl-carousel/css/owl.theme.css">
     <link rel="icon" href="img/indexpage/kale logo and header v1 3.jpg" type="image/x-icon">
     <!-- Theme CSS -->
-    <link rel="stylesheet" href="css/products.css">
+    
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/products.css">
 
     <!-- Skin CSS -->
     <link rel="stylesheet" href="css/skin/cool-gray.css">
@@ -280,7 +281,7 @@
     </section>
     <footer class="text-off-white">
 
-        <div class="footer-top">
+        <!-- <div class="footer-top">
             <div class="container">
                 <div class="row wow bounceInLeft" data-wow-delay="0.4s">
 
@@ -326,10 +327,10 @@
                         </div>
                     </div>
 
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
+                </div> 
+            </div> 
         </div>
-        </div>
+        </div> -->
 
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
@@ -373,6 +374,20 @@
             dots[slideIndex - 1].className += " selected";
         }
     </script>
+    <script src="inc/jquery/jquery-1.11.1.min.js"></script>
+    <script src="inc/bootstrap/js/bootstrap.min.js"></script>
+    <script src="inc/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="inc/stellar/js/jquery.stellar.min.js"></script>
+    <script src="inc/animations/js/wow.min.js"></script>
+    <script src="inc/waypoints.min.js"></script>
+    <script src="inc/isotope.pkgd.min.js"></script>
+    <script src="inc/classie.js"></script>
+    <script src="inc/jquery.easing.min.js"></script>
+    <script src="inc/jquery.counterup.min.js"></script>
+    <script src="inc/smoothscroll.js"></script>
+
+    <!-- Theme JS -->
+    <script src="js/theme.js"></script>
 </body>
 
 </html>
