--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="content" style="padding: 10px; margin:30px">
+                        <div class="content" style="padding: 10px; margin:0 px 30px 30px 30px">
                             <p style="font-size: 18px;"><strong>Kale Industrial Products</strong>, Belgavi, a firm
                                 proprietor by <strong>Mr.Ganesh Kale</strong> in 2021 with more than 30 years of industrial
                                 experience in the field.</p>
@@ -153,7 +153,7 @@
             <div class="col-sm-6">
                 <div class="img-pos">
                     <img style="width:100%;height:100%; object-fit:contain"
-                        src="img/about_2.png" alt=""
+                        src="img/slideshow/20.jpeg" alt=""
                         class="wp-image-926" />
 
                 </div>
@@ -279,7 +279,7 @@
     <!-- Begin footer -->
     <footer class="text-off-white">
 
-        <div class="footer-top">
+        <!-- <div class="footer-top">
             <div class="container">
                 <div class="row wow bounceInLeft" data-wow-delay="0.4s">
 
@@ -325,9 +325,9 @@
                         </div>
                     </div>
 
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
-        </div>
+                </div> 
+            </div> 
+        </div> -->
 
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
