--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                     <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                         <h2>About Us</h2>
                         <div class="devider"></div>
-                        <p class="subtitle"><b>What we do</b></p>
+                
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                     <h2>People Behind Company</h2>
                     <div class="devider"></div>
-                    <p class="subtitle"><b>little information</b></p>
+           
                 </div>
             </div>
         </div>
@@ -331,9 +331,7 @@
 
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova"
-                        class="theme-author">Veronika Poljakova</a> &amp; Developed by <a
-                        href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a></p>
+                <p class="copyright">Copyright &copy; 2021 - Kale Industrial Products</p>
             </div>
         </div>
 
