--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                             <h2>Contact US</h2>
                             <div class="devider"></div>
-                            <p class="subtitle">All to contact us</p>
+                         
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 
                 <div class="footer">
                     <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                        <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova" class="theme-author">Veronika Poljakova</a> &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a></p>
+                        <p class="copyright">Copyright &copy; 2021 - Kale Industrial Products</p>
                     </div>
                 </div>
 
