--- a/industry.html
+++ b/industry.html
@@ -305,7 +305,7 @@
             
             <div class="footer">
                 <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                    <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova" class="theme-author">Veronika Poljakova</a> &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a></p>
+                    <<p class="copyright">Copyright &copy; 2021 - Kale Industrial Products</p>
                 </div>
             </div>
 
