--- a/products.html
+++ b/products.html
@@ -165,7 +165,7 @@
                         <div class="Caption">Photo 1</div>
                     </div>
                     <div class="Slide">
-                        <img src="img/slideshow/2.jpeg" />
+                        <img src="img/slideshow/15.jpeg" />
                         <div class="Caption">Photo 2</div>
                     </div>
                     <div class="Slide">
@@ -334,9 +334,7 @@
 
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova"
-                        class="theme-author">Veronika Poljakova</a> &amp; Developed by <a
-                        href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a></p>
+                <p class="copyright">Copyright &copy; 2021 - Kale Industrial Products</p>
             </div>
         </div>
 
