--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
         <div class="page-header-wrapper">
             <div class="container">
                 <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
-                    <h2>People Behind The Company</h2>
+                    <h2>People Behind Company</h2>
                     <div class="devider"></div>
            
                 </div>
@@ -184,7 +184,7 @@
                         <div class="product-card">
                             <div class="product-container2">
                                 <h4 class="card-title">Ganesh Kale</h4>
-                                <h6 class="card-subtitle mb-2 text-muted">Proprietor
+                                <h6 class="card-subtitle mb-2 text-muted">proprietor
                                 </h6>
                                 
                                 <hr style="border-top: 3px solid #bbb;">
