--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="img-pos">
-                            <img style="width:100%;height:100%; object-fit:contain" src="img/welcome_part.jpeg" alt=""
+                            <img style="width:100%;height:100%; object-fit:contain" src="img/welcome.png" alt=""
                                 class="wp-image-922" />
                         </div>
                     </div>
@@ -226,7 +226,7 @@
 
                     <div class="col-sm-6">
                         <div class="img-pos">
-                            <img style="width:100%;height:450px; object-fit:contain" src="img/slideshow/r1.jpeg" alt=""
+                            <img style="width:100%;height:450px; object-fit:contain" src="img/slideshow/2.jpeg" alt=""
                                 class="wp-image-940" />
                         </div>
                     </div>
@@ -284,7 +284,7 @@
                                     <div class="row" id="portfolio">
                                         <div class="col-xs-12 col-sm-3 appsDevelopment">
                                             <div class="portfolio_single_content">
-                                                <img src="img/products/wood-pattern1.jpg" alt="title" style="object-fit: contain;"/>
+                                                <img src="img/products/wood-pattern1.jpg" alt="title" />
                                                 <div>
                                                     <a href="#">TEAK WOOD </a>
                                                     <span>PATTERNS</span>
