--- a/products.html
+++ b/products.html
@@ -161,7 +161,7 @@
                 <!-- Container for the image gallery -->
                 <div class="slideContainer">
                     <div class="Slide">
-                        <img src="img/slideshow/r4.jpeg" />
+                        <img src="img/slideshow/1.jpeg" />
                         <div class="Caption">Photo 1</div>
                     </div>
                     <div class="Slide">
@@ -169,7 +169,7 @@
                         <div class="Caption">Photo 2</div>
                     </div>
                     <div class="Slide">
-                        <img src="img/slideshow/r6.jpeg" />
+                        <img src="img/slideshow/3.jpeg" />
                         <div class="Caption">Photo 3</div>
                     </div>
                     <div class="Slide">
@@ -181,7 +181,7 @@
                         <div class="Caption">Photo 5</div>
                     </div>
                     <div class="Slide">
-                        <img src="img/slideshow/r5.jpeg" />
+                        <img src="img/slideshow/6.jpeg" />
                         <div class="Caption">Photo 6</div>
                     </div>
                     <div class="Slide">
